display range selection

--- a/src/app/cell-selection/cell-select.component.html
+++ b/src/app/cell-selection/cell-select.component.html
@@ -23,5 +23,5 @@
   </tbody>
 </table>
 
-<div *ngFor="let selectedCell of selectedCells">{{ selectedCell.day }} - {{ selectedCell.location }}</div>
+<div *ngFor="let selectedCell of selectedCells">Day - {{ selectedCell.day }} & Location - {{ selectedCell.location }}</div>
 <p>Selected Cells Count: {{ selectedCells.length }}</p>
